@@ -7,6 +7,7 @@ v0.15.0
 * Disabled tr locale (was reported as bad translation).
 * Compatibility with Firefox up to 23.0.
 * New substitution groups enabled by default in the substitution group editor.
+* Improved substitution list behaviour in options dialog (issue 112).
 
 v0.14.0 (16-1-2013)
 * Removed compatibility with the substitution list in the 0.10 format.
